2002-11-19  Jeremy Browne  <jeremy@synonymous.ca>

	* menu.c: (new_cb) (exit_cb): changed new game / quit dialogs for
	consistancy with other parts of gnome-games package. (Bug #97321)

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* gnobots2.desktop.in: add X-GNOME-BUGZILLA stuff

2002-11-11  Tim Musson <trmusson@ihug.co.nz>

	* game.c: (show_scores): no more multiple Score dialogs.
	* menu.c: (about_cb): no more multiple About dialogs. These fix
	#97320 for gnobots.

2002-11-11  Ross Burton  <ross@burtonini.com>

	* gnome-gnobots2.png: New icon contributed by Timothy Musson.

2002-08-23  Ross Burton  <ross@burtonini.com>

	* game.c:
	* gnobots.c:
	* menu.c:
	* menu.h:
	* properties.c: Enable the high scores dialog. Patch from Andrew
	Sobala <andrew@sobala.net>, fixing #84235.

2002-08-20  Ross Burton  <ross@burtonini.com>

	* menu.c: Rewrite the Quit and New callbacks. Fixes #90984.

2002-07-06  Ross Burton  <ross@burtonini.com>

	* keyboard.c (keyboard_cb): Allow the menu keyboard navigation
	(such as Alt-g) to work.
	* menu.c (about_cb): Allow the About -> Credits dialog to be
	closed.
	(both of these are from Timothy Musson <trmusson@ihug.co.nz>)

2002-06-02  Ross Burton  <ross@burtonini.com>

	* graphics.c: Use the application pixmap path instead of the
	system path, so pixmaps loads if installed in a different prefix
	to libgnome.

2002-06-03  Bastien Nocera  <hadess@hadess.net>

	* menu.c: (about_cb): remove separator in help menu, add icon in the
	about box

2002-05-10  Dave Neary  <bolsh@gimp.org>

	* Makefile.am:
	* game.c:
	* gameconfig.c:
	* gnobots.c:
	* graphics.c:
	* menu.c:
	* properties.c:
	* statusbar.c: Ported gnobots2 to gnome2, and got it
	compiling with -D*_DISABLE_DEPRECATED. Left to do: Change
	all dialogs to "action word" usable stuff. Enable Keynav.
	Handle changes in properties using gconf.

2002-05-05  Chris Lyttle    <chris@wilddev.net>

	* help/C/gnobots2-C.omf : updated for new format of SK 0.3.8.