@@ -1,3 +1,9 @@
+2002-11-27  Ross Burton  <ross@burtonini.com>
+
+	* menu.c: 
+	* gnobots.c: 
+	* graphics.c: s/Gnome/GNOME/, for #99683.
+
 2002-11-19  Jeremy Browne  <jeremy@synonymous.ca>
 
 	* menu.c: (new_cb) (exit_cb): changed new game / quit dialogs for
